--- a/TweetLocations/en.lproj/iPad.storyboard
+++ b/TweetLocations/en.lproj/iPad.storyboard
@@ -22,10 +22,10 @@
             </objects>
             <point key="canvasLocation" x="448" y="-630"/>
         </scene>
-        <!--Loc Detail View Controller - Detail-->
+        <!--Loc Big Detail View Controller - Detail-->
         <scene sceneID="16">
             <objects>
-                <viewController title="Detail" modalPresentationStyle="currentContext" id="4" customClass="TWLocDetailViewController" sceneMemberID="viewController">
+                <viewController title="Detail" modalPresentationStyle="currentContext" id="4" customClass="TWLocBigDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="26">
                         <rect key="frame" x="0.0" y="64" width="703" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -98,7 +98,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
-                                            <outlet property="image" destination="nJT-vz-m8b" id="0IP-HW-MWM"/>
+                                            <outlet property="theImage" destination="nJT-vz-m8b" id="Nkp-Sk-J1c"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
